--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 # https://learnxinyminutes.com/docs/yaml/
 
 title: Surrogates-GP-with-Python
-description: Surrogates-GP-with-Python
+description: Revisiting Surrogates GP book with Python
 github_username: patel-zeel
 # you can comment the below line out if your repo name is not different than your baseurl
 github_repo: "Surrogates-GP-with-Python"
